--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
+static/*
 polyledger/static/*
 !polyledger/static/polyledger/
 !polyledger/static/favicon.ico
