--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,8 @@ media
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 static/*
-polyledger/static/*
-!polyledger/static/polyledger/
-!polyledger/static/favicon.ico
+!static/polyledger/
+!static/favicon.ico
 
 
 ### macOS ###
