--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ plaid-python>=2.0,<2.1
 stripe==1.66.0
 celery==4.1
 redis==2.10.6
+gdax==1.0.6
+coinbase==2.0.6
 git+ssh://git@github.com/polyledger/lattice.git@0.2.dev2
