--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,7 @@ target/
 .python-version
 
 # celery beat schedule file
-celerybeat-schedule
+celerybeat-schedule.db
 
 # SageMath parsed files
 *.sage.py
