--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.17.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
