--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,7 @@
 FROM nginx
-ADD ./nginx.conf /etc/nginx/nginx.conf
-# COPY ./client/dist /usr/share/nginx/html
+
+# Add the Nginx configuration file
+ADD ./nginx/nginx.conf /etc/nginx/nginx.conf
+
+# Copy over static assets from the client application
+COPY ./client/dist /usr/share/nginx/html
