--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,43 +5,51 @@ error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;
+  worker_connections 1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-    '$status $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for"';
+  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                  '$status $body_bytes_sent "$http_referer" '
+                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
+  access_log /var/log/nginx/access.log main;
 
-    server {
-        listen 80 default_server;
-        server_name localhost;
-        charset utf-8;
+  upstream server {
+    server server:8000;
+  }
 
-        location / {
-            proxy_pass http://client:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
-        }
+  server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name localhost;
+    charset utf-8;
 
-        location ^~ /staticfiles/ {
-          autoindex on;
-          alias /usr/src/staticfiles/;
-        }
+    root /usr/share/nginx/html;
+    index index.html;
 
-        location ^~ /(api|admin) {
-            proxy_pass http://server:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
-        }
+    location / {
+      try_files $uri $uri/ @rewrites;
     }
+
+    location @rewrites {
+      rewrite ^(.+)$ /index.html last;
+    }
+
+    location ^~ /static/ {
+      autoindex on;
+      alias /usr/share/nginx/html/static/;
+    }
+
+    location ~ ^/api {
+      proxy_pass http://server;
+    }
+
+    location ~ ^/admin {
+      proxy_pass http://server;
+    }
+  }
 }
