--- a/server/.gitignore
+++ b/server/.gitignore
@@ -10,11 +10,11 @@ local_settings.py
 db.sqlite3
 media
 
-# If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
+# If your build process includes running collectstatic, then you probably don't need or want to include them
 # in your Git repository. Update and uncomment the following line accordingly.
 static/*
-!static/polyledger/
-!static/favicon.ico
+!polyledger/static/polyledger/
+!polyledger/static/favicon.ico
 
 
 ### macOS ###
