--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,7 +18,7 @@ http {
 
   access_log /var/log/nginx/access.log main;
 
-  upstream server {
+  upstream django {
     server server:8000;
   }
 
@@ -45,11 +45,21 @@ http {
     }
 
     location ~ ^/api {
-      proxy_pass http://server;
+      proxy_pass http://django;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Host $server_name;
     }
 
     location ~ ^/admin {
-      proxy_pass http://server;
+      proxy_pass http://django;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Host $server_name;
     }
   }
 }
