--- a/production.yml
+++ b/production.yml
@@ -15,16 +15,14 @@ services:
     image: nginx
     restart: always
     volumes:
-      - static:/usr/share/nginx/html/static/admin
-      - static:/usr/share/nginx/html/static/rest_framework
-      - static:/usr/share/nginx/html/static/polyledger
+      - static:/usr/share/nginx/html/static/
     ports:
       - 80:80
     depends_on:
       - server
     command: nginx -g 'daemon off';
 
-  server:
+  server: &server
     container_name: server
     build:
       context: ./server
@@ -36,9 +34,7 @@ services:
       - postgres
     env_file: .env.production
     volumes:
-      - static:/usr/share/nginx/html/static/admin
-      - static:/usr/share/nginx/html/static/rest_framework
-      - static:/usr/share/nginx/html/static/polyledger
+      - static:/usr/share/nginx/html/static/
     command: >
       bash -c '
       python manage.py makemigrations &&
@@ -62,12 +58,24 @@ services:
     ports:
       - 6379:6379
 
-  worker:
-    container_name: worker
-    build:
-      context: ./server
-    env_file: .env.production
+  celery_worker:
+    <<: *server
+    container_name: celery_worker
+    hostname: celery_worker
     command: celery -A polyledger worker -l info
     depends_on:
-      - server
       - redis
+      - postgres
+    ports: []
+    volumes: []
+
+  celery_beat:
+    <<: *server
+    container_name: celery_beat
+    hostname: celery_beat
+    command: celery -A polyledger beat -l info -s celerybeat-schedule.db
+    depends_on:
+      - redis
+      - postgres
+    ports: []
+    volumes: []
