--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,4 +9,6 @@ scipy==1.0.0
 numpy==1.14.0
 pandas==0.18.1
 requests==2.18.4
-python-binance==0.6.2
+django-celery-results==1.0.1
+django-celery-beat==1.1.0
+django-redis-cache==1.7.1
