--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "coinage-lib": "^1.0.2",
     "highcharts": "^6.0.7",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
@@ -20,10 +21,15 @@
     "react-google-recaptcha": "^0.9.9",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "scripts": {
     "precommit": "lint-staged",
