--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.5.4",
+    "vue-stripe-checkout": "^1.0.3",
     "vuex": "^3.0.1",
     "zxcvbn": "^4.4.2"
   },
