--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "coinage-lib": "^1.0.2",
+    "eslint": "^4.19.1",
     "highcharts": "^6.0.7",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
