--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "numeral": "^2.0.6",
     "prettier": "^1.11.0",
     "react": "^16.2.0",
+    "react-async-script": "^0.9.1",
     "react-dom": "^16.2.0",
     "react-google-recaptcha": "^0.9.9",
     "react-redux": "^5.0.7",
