--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polyledger",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "The front-end client for the Polyledger platform",
   "author": "Matthew Rosendin <matthew@polyledger.com>",
   "private": true,
@@ -10,7 +10,9 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "coinage-lib": "^1.0.2",
+    "cross-fetch": "^2.1.0",
     "eslint": "^4.19.1",
     "highcharts": "^6.0.7",
     "husky": "^0.14.3",
@@ -25,13 +27,12 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
+  "proxy": "http://server:8000",
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier --write",
-      "git add"
-    ]
+    "src/**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
   },
   "scripts": {
     "precommit": "lint-staged",
