--- a/client/bootstrap/package.json
+++ b/client/bootstrap/package.json
@@ -6,12 +6,13 @@
   "author": "Matt Rosendin <matthew@polyledger.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "node-sass --include-path ./node_modules ./scss/index.scss -o ./css"
+    "build":
+      "node-sass --include-path ./node_modules ./scss/index.scss -o ./css"
   },
   "dependencies": {
-    "bootstrap": "4.0.0",
+    "bootstrap": "^4.1.0",
     "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.3",
     "popper.js": "^1.14.3"
   }
 }
