--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "coinage-lib": "^1.0.2",
     "cross-fetch": "^2.1.0",
     "eslint": "^4.19.1",
+    "font-awesome": "^4.7.0",
     "highcharts": "^6.0.7",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
@@ -28,11 +29,15 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.2.1"
   },
   "proxy": "http://server:8000",
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "scripts": {
     "precommit": "lint-staged",
