Fix recaptcha alerts and linting

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,7 +9,11 @@
     }
   },
   "plugins": ["react"],
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": [
+    "plugin:prettier/recommended",
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "rules": {
     "comma-dangle": 0
   },
