--- a/client/package.json
+++ b/client/package.json
@@ -34,10 +34,7 @@
   },
   "proxy": "http://server:8000",
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier --write",
-      "git add"
-    ]
+    "src/**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
   },
   "scripts": {
     "precommit": "lint-staged",
