Move bootstrap module into own repository and install from npmjs.org

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "1.1.1"
   },
   "dependencies": {
+    "@polyledger/bootstrap": "^1.0.1",
     "babel-polyfill": "^6.26.0",
     "coinage-lib": "^1.0.2",
     "cross-fetch": "^2.1.0",
@@ -31,7 +32,9 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "validate": "^4.3.0",
+    "validator": "^9.4.1"
   },
   "proxy": "http://server:8000",
   "lint-staged": {
