Update Nginx Dockerfile to copy React  folder instead of Vue  folder; fix static asset overwriting issue in Nginx container

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,5 +3,5 @@ FROM nginx
 # Add the Nginx configuration file
 ADD ./nginx/nginx.conf /etc/nginx/nginx.conf
 
-# Copy over static assets from the client application
-COPY ./client/dist /usr/share/nginx/html
+# Copy over static assets from the web app
+COPY ./client/build /usr/share/nginx/html
