--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,9 +23,25 @@ http {
   }
 
   server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name localhost;
+    listen 80;
+    listen [::]:80;
+    server_name admin.polyledger.com;
+    charset utf-8;
+
+    location /admin {
+      proxy_pass http://django;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Host $server_name;
+    }
+  }
+
+  server {
+    listen 80;
+    listen [::]:80;
+    server_name portfolio.polyledger.com;
     charset utf-8;
 
     root /usr/share/nginx/html;
@@ -45,15 +61,6 @@ http {
     }
 
     location ~ ^/api {
-      proxy_pass http://django;
-      proxy_redirect     off;
-      proxy_set_header   Host $host;
-      proxy_set_header   X-Real-IP $remote_addr;
-      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Host $server_name;
-    }
-
-    location ~ ^/admin {
       proxy_pass http://django;
       proxy_redirect     off;
       proxy_set_header   Host $host;
