Forward to /admin

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,8 +28,8 @@ http {
     server_name admin.polyledger.com;
     charset utf-8;
 
-    location /admin {
-      proxy_pass http://django;
+    location / {
+      proxy_pass http://django/admin;
       proxy_redirect     off;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
