--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,7 @@ http {
     charset utf-8;
 
     location / {
-      proxy_pass http://django/admin;
+      proxy_pass http://django/admin/;
       proxy_redirect     off;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
