--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,10 +18,6 @@ http {
 
   access_log /var/log/nginx/access.log main;
 
-  upstream django {
-    server server:8000;
-  }
-
   server {
     listen 80;
     listen [::]:80;
@@ -29,7 +25,7 @@ http {
     charset utf-8;
 
     location / {
-      proxy_pass http://django/admin/;
+      proxy_pass http://server:8000;
       proxy_redirect     off;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
@@ -61,7 +57,7 @@ http {
     }
 
     location ~ ^/api {
-      proxy_pass http://django;
+      proxy_pass http://server:8000;
       proxy_redirect     off;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
