--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,29 @@
+# Refer to Docker documentation
+# https://docs.docker.com/get-started/
+
+# Use an official Python runtime as parent image
 FROM python:3.6
 
-# To enable logging
-ENV PYTHONUNBUFFERED 1
+ENV INSTALL_PATH /srv/polyledger
+RUN mkdir -p $INSTALL_PATH
 
-# Create server directory
-RUN mkdir -p /srv/polyledger
-WORKDIR /srv/polyledger
+# Set working directory to /srv/polyledger
+WORKDIR $INSTALL_PATH
 
-# Install the server dependencies
+# Install supervisord
+RUN apt-get update && apt-get install -y supervisor
+
+# Copy requirements and install to enable caching on rebuilds
 COPY requirements.txt /srv/polyledger
+
+# Install any needed packages specified in requirements.txt
 RUN pip3 install -r requirements.txt
 
-# Bundle the source
-COPY . /srv/polyledger
+# Copy the current directory contents into the container at /capstone
+COPY . .
 
-# Expose port 8000 in the container
-EXPOSE 8000
+# Define environment variables
+ENV PYTHONUNBUFFERED 1
+
+# Run supervisord
+CMD ["/usr/bin/supervisord"]
