--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,23 +21,7 @@ http {
   server {
     listen 80;
     listen [::]:80;
-    server_name admin.polyledger.com;
-    charset utf-8;
-
-    location / {
-      proxy_pass http://server:8000;
-      proxy_redirect     off;
-      proxy_set_header   Host $host;
-      proxy_set_header   X-Real-IP $remote_addr;
-      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Host $server_name;
-    }
-  }
-
-  server {
-    listen 80;
-    listen [::]:80;
-    server_name portfolio.polyledger.com;
+    server_name localhost;
     charset utf-8;
 
     root /usr/share/nginx/html;
@@ -57,6 +41,15 @@ http {
     }
 
     location ~ ^/api {
+      proxy_pass http://server:8000;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Host $server_name;
+    }
+
+    location ~ ^/admin {
       proxy_pass http://server:8000;
       proxy_redirect     off;
       proxy_set_header   Host $host;
