Use Django development server in development environment to reload on file changes via volume

--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -10,7 +10,7 @@ command=
   /bin/bash -c '
   python manage.py makemigrations &&
   python manage.py migrate &&
-  gunicorn polyledger.wsgi -b 0.0.0.0:8000'
+  python manage.py runserver 0.0.0.0:8000'
 
 [program:celery_worker]
 stdout_logfile=/dev/stdout
