--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -6,11 +6,8 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-command=
-  /bin/bash -c '
-  python manage.py makemigrations &&
-  python manage.py migrate &&
-  python manage.py runserver 0.0.0.0:8000'
+command=/bin/bash ./start.sh
+user=polyledger
 
 [program:celery_worker]
 stdout_logfile=/dev/stdout
@@ -18,6 +15,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 command=celery -A polyledger worker -l info
+user=polyledger
 
 [program:celery_beat]
 stdout_logfile=/dev/stdout
@@ -25,3 +23,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 command=celery -A polyledger beat -l info -s celerybeat-schedule.db
+user=polyledger
