Give non-root user write access to Celery PID and scheduler files

--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -22,5 +22,8 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-command=celery -A polyledger beat -l info -s celerybeat-schedule.db
+command=
+  celery -A polyledger beat -l info
+  --schedule /var/celery/celerybeat-schedule.db
+  --pidfile="/tmp/celery/celerybeat.pid"
 user=polyledger
