Updated Redis config. TODO: need to update settings/base.py? Config DATABASE_URL via plugin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - postgres
       - redis
     env_file: .env.development
+    environment:
+      - REDIS_URL=redis://redis
 
   postgres:
     container_name: postgres
