--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,6 +40,33 @@ http {
       alias /usr/share/nginx/html/static/;
     }
 
+    location ^~ /static/admin/ {
+      proxy_pass http://server:8000;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Host $server_name;
+    }
+
+    location ^~ /static/rest_framework/ {
+      proxy_pass http://server:8000;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Host $server_name;
+    }
+
+    location ^~ /static/polyledger/ {
+      proxy_pass http://server:8000;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+      proxy_set_header   X-Real-IP $remote_addr;
+      proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Host $server_name;
+    }
+
     location ~ ^/api {
       proxy_pass http://server:8000;
       proxy_redirect     off;
