--- a/web_client/package.json
+++ b/web_client/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "highcharts": "^6.0.7",
     "husky": "^0.14.3",
+    "jquery": "^3.3.1",
     "lint-staged": "^7.0.0",
     "numeral": "^2.0.6",
     "prettier": "^1.11.0",
